# backend-worker

./: .env  .gitmodules  Makefile  README.md  docker-compose.yml  pyproject.toml
dockerfiles/gatherer/: Dockerfile
dockerfiles/generator/: Dockerfile
dockerfiles/parser/: Dockerfile
worker/configs/: get_settings.py  neo4j.py  postgresql.py
worker/insight_generator/: cron.py  db.py  insight_miner.py
worker/news_gatherer/: cron.py  db.py  graph.py  rss_parser.py
worker/trends_parser/: cron.py  db.py  get_trends.py  ner_parser.py
