[tool.poetry]
name = "backend-worker"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.41"
pytz = "^2022.4"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
asyncpg = "^0.26.0"
greenlet = "^1.1.3"
feedparser = "^6.0.10"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
